update word ing on smt, live, web fix header overflow, fix hamburger menu scrolling, fix phone numberline breaks

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,7 +6,8 @@
     display: block;
 }
 .m-home,
-.copyright-content--mobile {
+.copyright-content--mobile,
+.mobile__video-caption {
     display: none;
 }
 @media only screen and (max-width: 48em) {
@@ -20,16 +21,21 @@
         background: none;
         overflow-x: hidden;
     }
+    body#subpage.frozen {
+        overflow: hidden;
+    }
     .page-description {
         height: 50px;
+        display:none;
     }
     .navbar {
         width: 100%;
         height: 48px;
         margin: 0;
+        display: none;
     }
     #main-content {
-        margin-top: 0;
+        margin-top: 50px;
     }
     .content-left {
         width: 100%;
@@ -61,13 +67,19 @@
         background: none;
         text-indent: 0;
         position: absolute;
-        top: 7px;
-        right: 5px;
+        top: 8px;
+        right: 10px;
         width: auto;
         margin: 0;
         font-size: 14px;
         color: #bdbdbd;    
         height: auto;
+    }
+    .mobile__header {
+        z-index: 50;
+        position: absolute;
+        width: 100%;
+        background: #021420;
     }
     #mobile__menu-btn {
         position: absolute;
@@ -124,6 +136,7 @@
         width: 100%;
         z-index: 1;
         margin: 0;
+        top:0;
         background-color: #021420;
         display: none;
         background-repeat: repeat-y;
@@ -135,10 +148,12 @@
     }
     #navigation.active {
         display: block;
+        overflow-y: auto;
     }
     #navigation ul {
         z-index: 3;
         position: absolute;
+        margin-top:48px;
     }
     #navigation ul li {
         float: none;
@@ -303,7 +318,7 @@
     /****** gallery pages ******/
     #bigpic2 {
         height: auto !important;
-        margin-top: 50px;
+        margin-top: 0;
     }
     #bigpic2 img {
         width: 100%;
@@ -412,7 +427,6 @@
         border-bottom: none;
     }
     .m-home__secondary li {
-        padding: 12px 10px;
         background: #ededed;
         box-sizing: border-box;
         border-bottom: 1px solid #041016;
@@ -421,7 +435,11 @@
         border-right: 0;
     }
     .m-home__secondary li a {
+        padding: 12px 10px;
         color: #165c8d;
+        height: 100%;
+        width: 100%;
+        display: block;
     }
     .m-home__secondary li:last-of-type {
         border-bottom: 0;
@@ -459,5 +477,16 @@
     }
     .copyright-content--mobile div:first-of-type {
         margin-top: 0;
+    }
+
+    /***/
+    .mobile__video-caption {
+        color: #737474;
+        font-size: 12px;
+        margin-bottom: 10px;
+        display: block;
+    }
+    #portfolio3 ul li .project-image {
+        background: none;
     }
 }
